--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.58.0",
+    "konva": "^9.3.0",
     "monaco-editor": "^0.45.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
