--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@unocss/reset": "^0.58.0",
     "konva": "^9.3.0",
     "monaco-editor": "^0.45.0",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
