--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@unocss/reset": "^0.58.0",
     "konva": "^9.3.0",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "^0.45.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
@@ -24,6 +25,7 @@
     "@arco-design/web-vue": "^2.53.3",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.19.3",
     "@unocss/preset-rem-to-px": "^0.58.0",
     "@vitejs/plugin-vue": "^4.5.2",
